<resources>
    <string name="app_name">TempHumi</string>
    <string name="byCleanBits">by CleanBits</string>
    <string name="loading">Loading…</string>
    <string name="rightsreserved">All Rights Reserved</string>
    <string name="login">Login</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="signUp">Sign Up</string>
    <string name="e_mail_address">E-mail</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="alreadyHaveAccount">Already have an account?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="surname">Surname</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">I7VxcvcuBgkI4EhQTzawv9bPZQKQGZC08G3pGIxX</string>
    <string name="back4app_client_key">E6TuqgTwsesHwHgRFxt3Wykn6kD9wBmMPIat3kYY</string>
    <string name="aboutUs">About us</string>
    <string name="logout">Log out</string>
    <string name="resetPassword">Reset password</string>
    <string name="checkEmail">Please, check your e-mail</string>
    <string name="enter_an_institution">Enter an institution...</string>
    <string name="submit">Submit</string>
    <string name="unknown">0</string>
    <string name="ideal_temperature">Ideal Temperature</string>
    <string name="ideal_humidity">Ideal Humidity</string>
    <string name="score">Score</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="cancel">Cancel</string>
</resources>
