<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBDCB2"
    tools:context=".Activity.MainActivity">


    <EditText
        android:id="@+id/institutionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_an_institution"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/submitButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="#FFFFFF"
        android:text="@string/submit"
        android:textColor="#258039"
        android:onClick="SubmitInstitution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/idealLayout"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/institutionEditText">

        <TextView
            android:id="@+id/idealTempTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="#FFBB00"
            android:paddingLeft="50sp"
            android:paddingTop="20sp"
            android:paddingRight="50sp"
            android:paddingBottom="20sp"
            android:text="@string/unknown"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/idealHumTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:background="#375E97"
            android:paddingLeft="50sp"
            android:paddingTop="20sp"
            android:paddingRight="50sp"
            android:paddingBottom="20sp"
            android:text="@string/unknown"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ideal_temperature"
        android:textColor="#258039"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idealLayout" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:text="@string/ideal_humidity"
        android:textColor="#258039"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idealLayout" />

    <LinearLayout
        android:id="@+id/calcLayout"
        android:layout_width="375dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/scoreEditText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="4"
            android:hint="@string/score"
            android:inputType="number"
            tools:targetApi="o" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="nextButtonClicked"
            android:text="@string/next"
            android:textSize="12sp" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="finishButtonClicked"
            android:text="@string/finish"
            android:textSize="12sp" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10sp"
            android:layout_weight="1"
            android:onClick="cancelButtonClicked"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>