<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBDCB2"
    tools:context=".Activity.LoginActivity">

    <TextView
        android:id="@+id/TempHumiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:fontFamily="serif"
        android:padding="45dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#258039"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/LoginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#258039"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line3" />

    <View
        android:id="@+id/line3"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TempHumiTextView" />

    <View
        android:id="@+id/line4"
        android:layout_width="350dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginTextView" />

    <TextView
        android:id="@+id/dontHaveAccountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="15dp"
        android:text="@string/dontHaveAccount"
        android:textColor="#258039"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line4" />

    <TextView
        android:id="@+id/SignupTextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="60dp"
        android:layout_toEndOf="@+id/dontHaveAccountTextView"
        android:background="#00FFFFFF"
        android:onClick="GoToSignupActivity"
        android:text="@string/signUp"
        android:textAllCaps="false"
        android:textColor="#258039"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dontHaveAccountTextView"
        app:layout_constraintTop_toTopOf="@+id/line4" />

    <EditText
        android:id="@+id/usernameText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dontHaveAccountTextView"
        android:layout_marginTop="30dp"
        android:autofillHints=""
        android:ems="16"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#258039"
        android:textColorHint="#258039"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveAccountTextView"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/passwordText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameText2"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:ems="16"
        android:hint="@string/password"
        android:inputType="numberPassword"
        android:textColor="#258039"
        android:textColorHint="#258039"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameText2"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="ForgotPassword"
        android:text="@string/forgot_your_password"
        android:textColor="#258039"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText2" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#258039"
        android:onClick="Login"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText2" />

</androidx.constraintlayout.widget.ConstraintLayout>